add gravatar props example

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.2.0/js/md5.js"></script>
 <script src="https://fb.me/react-0.13.3.js"></script>
 <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
 
-<script type="text/jsx" src="solution-1.js"></script>
+<script type="text/jsx" src="props-example.js"></script>
 </html>
