--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
 <script src="https://fb.me/react-0.13.3.js"></script>
 <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
 
-<script type="text/jsx" src="props-example.js"></script>
+<script type="text/jsx" src="events-and-state.js"></script>
 </html>
