--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="jumbotron">
   <div class="container">
-    <div id="hello"></div>
+    <div id="app"></div>
   </div>
 </div>
 
@@ -26,6 +26,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.2.0/js/md5.js"></script>
 <script src="https://fb.me/react-0.13.3.js"></script>
 <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
+<script type="text/jsx" src="./components/ProductCategoryRow.js"></script>
+<script type="text/jsx" src="./components/ProductRow.js"></script>
 
-<script type="text/jsx" src="events-and-state.js"></script>
+<script type="text/jsx" src="./components/SearchBar.js"></script>
+<script type="text/jsx" src="./components/ProductTable.js"></script>
+<script type="text/jsx" src="./components/FilterableProductTable.js"></script>
 </html>
