m$&$^$&fin tutorial doesn't work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="jumbotron">
   <div class="container">
-    <div id="app"></div>
+    <div id="container"></div>
   </div>
 </div>
 
